Overflow fix-2

--- a/src/Components/OurProjects/OurProjects.css
+++ b/src/Components/OurProjects/OurProjects.css
@@ -42,7 +42,8 @@
     width: 50%;
     height: 90%;
     position: relative;
-    overflow-x: hidden;
+    overflow: hidden;
+
 }
 .overlay-2{
     position: absolute;
